// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtSearchBar Snap render AtSearchBar -- props actionName 1`] = `
<view
  class="at-search-bar"
>
  <!-- searchbar input -->
  <view
    class="at-search-bar__input-cnt"
  >
    <!-- placeholder -->
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <!-- input -->
    <input
      class="at-search-bar__input"
      confirm-type="search"
      id="weui-inputIIMDFMGK"
      maxlength="140"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
  </view>
  <!-- action -->
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -171px;"
  >
    actionName
  </view>
</view>
`;

exports[`AtSearchBar Snap render AtSearchBar -- props className 1`] = `
<view
  class="at-search-bar"
>
  <!-- searchbar input -->
  <view
    class="at-search-bar__input-cnt"
  >
    <!-- placeholder -->
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <!-- input -->
    <input
      class="at-search-bar__input"
      confirm-type="search"
      id="weui-inputJHLFLKCB"
      maxlength="140"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
  </view>
  <!-- action -->
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar Snap render AtSearchBar -- props customStyle 1`] = `
<view
  class="at-search-bar"
  customstyle="color:red;"
>
  <!-- searchbar input -->
  <view
    class="at-search-bar__input-cnt"
  >
    <!-- placeholder -->
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <!-- input -->
    <input
      class="at-search-bar__input"
      confirm-type="search"
      id="weui-inputPGCHFFPI"
      maxlength="140"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
  </view>
  <!-- action -->
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar Snap render AtSearchBar -- props disabled 1`] = `
<view
  class="at-search-bar"
>
  <!-- searchbar input -->
  <view
    class="at-search-bar__input-cnt"
  >
    <!-- placeholder -->
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <!-- input -->
    <input
      class="at-search-bar__input"
      confirm-type="search"
      disabled=""
      id="weui-inputFBFCNJEJ"
      maxlength="140"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
  </view>
  <!-- action -->
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar Snap render AtSearchBar -- props fixed 1`] = `
<view
  class="at-search-bar at-search-bar--fixed"
>
  <!-- searchbar input -->
  <view
    class="at-search-bar__input-cnt"
  >
    <!-- placeholder -->
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <!-- input -->
    <input
      class="at-search-bar__input"
      confirm-type="search"
      id="weui-inputEHGPEKCC"
      maxlength="140"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
  </view>
  <!-- action -->
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar Snap render AtSearchBar -- props fucos 1`] = `
<view
  class="at-search-bar"
  fucos="true"
>
  <!-- searchbar input -->
  <view
    class="at-search-bar__input-cnt"
  >
    <!-- placeholder -->
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <!-- input -->
    <input
      class="at-search-bar__input"
      confirm-type="search"
      id="weui-inputDKDICBNC"
      maxlength="140"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
  </view>
  <!-- action -->
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar Snap render AtSearchBar -- props inputType number 1`] = `
<view
  class="at-search-bar"
>
  <!-- searchbar input -->
  <view
    class="at-search-bar__input-cnt"
  >
    <!-- placeholder -->
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <!-- input -->
    <input
      class="at-search-bar__input"
      confirm-type="search"
      id="weui-inputACFOOIAD"
      maxlength="140"
      type="number"
    />
    <!-- clear icon -->
    <!--v-if-->
  </view>
  <!-- action -->
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar Snap render AtSearchBar -- props maxLength 1`] = `
<view
  class="at-search-bar"
>
  <!-- searchbar input -->
  <view
    class="at-search-bar__input-cnt"
  >
    <!-- placeholder -->
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <!-- input -->
    <input
      class="at-search-bar__input"
      confirm-type="search"
      id="weui-inputBNEAELBM"
      maxlength="120"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
  </view>
  <!-- action -->
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar Snap render AtSearchBar -- props placeholder 1`] = `
<view
  class="at-search-bar"
>
  <!-- searchbar input -->
  <view
    class="at-search-bar__input-cnt"
  >
    <!-- placeholder -->
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        placeholder
      </text>
    </view>
    <!-- input -->
    <input
      class="at-search-bar__input"
      confirm-type="search"
      id="weui-inputDFAPDAIK"
      maxlength="140"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
  </view>
  <!-- action -->
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar Snap render AtSearchBar -- props showActionButton 1`] = `
<view
  class="at-search-bar"
>
  <!-- searchbar input -->
  <view
    class="at-search-bar__input-cnt"
  >
    <!-- placeholder -->
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <!-- input -->
    <input
      class="at-search-bar__input"
      confirm-type="search"
      id="weui-inputFJMFIEAG"
      maxlength="140"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
  </view>
  <!-- action -->
  <view
    class="at-search-bar__action"
    style="opacity: 1; margin-right: 0px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar Snap render AtSearchBar -- props value 1`] = `
<view
  class="at-search-bar"
  value="value"
>
  <!-- searchbar input -->
  <view
    class="at-search-bar__input-cnt"
  >
    <!-- placeholder -->
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <!-- input -->
    <input
      class="at-search-bar__input"
      confirm-type="search"
      id="weui-inputAJPEJGHP"
      maxlength="140"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
  </view>
  <!-- action -->
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar Snap render initial AtSearchBar 1`] = `
<view
  class="at-search-bar"
>
  <!-- searchbar input -->
  <view
    class="at-search-bar__input-cnt"
  >
    <!-- placeholder -->
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <!-- input -->
    <input
      class="at-search-bar__input"
      confirm-type="search"
      id="weui-inputHBFNKLNL"
      maxlength="140"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
  </view>
  <!-- action -->
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;
